--- a/Student-Portal/Views/Account/AccessDenied.cshtml
+++ b/Student-Portal/Views/Account/AccessDenied.cshtml
@@ -1,5 +1,57 @@
 ﻿@{
     ViewBag.Title = "Access denied due to insufficient permissions";
+    Layout = null;
 }
 
-<h1 class="text-danger">Access denied due to insufficient permissions.</h1>
+@*<h1 class="text-danger">Access denied due to insufficient permissions.</h1>*@
+<!doctype html>
+<html class="no-js" lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>403 Forbidden</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="~/Content2/img/favicon.png" rel="icon">
+
+    @Styles.Render("~/template/css")
+    @Scripts.Render("~/bundles/modernizr")
+
+    <!-- amchart css -->
+    <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
+
+    <!-- modernizr css -->
+    @*<script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>*@
+</head>
+
+<body>
+    <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+    <!-- preloader area start -->
+    <div id="preloader">
+        <div class="loader"></div>
+    </div>
+    <!-- preloader area end -->
+    <!-- error area start -->
+    <div class="error-area ptb--100 text-center">
+        <div class="container">
+            <div class="error-content">
+                <h2 class="text-danger">
+                    403
+                </h2>
+                <p>We're sorry, but you do not have access to this page.</p>
+                <p>That's all we know.</p>
+                <a href="/RegisterCourse">Back to Dashboard</a>
+            </div>
+        </div>
+    </div>
+    <!-- error area end -->
+    @Scripts.Render("~/template/js")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+
+</body>
+
+</html>
+
