chnges reference link to user settings

--- a/Student-Portal/Views/Shared/_CustomLayout.cshtml
+++ b/Student-Portal/Views/Shared/_CustomLayout.cshtml
@@ -46,7 +46,7 @@
                     <nav>
                         <ul class="metismenu" id="menu">
                             <li class="active">
-                                <a href="/Role"><i class="fa fa-user"></i><span>@FullName</span></a>
+                                <a href="/Manage/Settings"><i class="fa fa-user"></i><span>@FullName</span></a>
                             </li>
                             <li>
                             <li class="active">
