--- a/Student-Portal/Views/Manage/Settings.cshtml
+++ b/Student-Portal/Views/Manage/Settings.cshtml
@@ -1,4 +1,8 @@
-﻿
+﻿@model Student_Portal.Models.ProfileViewModel
+@using Microsoft.AspNet.Identity;
+@using Microsoft.AspNet.Identity.EntityFramework;
+@using Student_Portal.Models;
+
 @{
     ViewBag.Title = "Profile Settings";
     Layout = "~/Views/Shared/_CustomLayout.cshtml";
@@ -8,168 +12,82 @@
         <div class="col-12 mt-5">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="header-title">Textual inputs</h4>
-                    <p class="text-muted font-14 mb-4">Here are examples of <code>.form-control</code> applied to each textual HTML5 <code>&lt;input&gt;</code> <code>type</code>.</p>
-                    <div class="form-group">
-                        <label for="example-text-input" class="col-form-label">Text</label>
-                        <input class="form-control" type="text" value="Carlos Rath" id="example-text-input">
-                    </div>
-                    <div class="form-group">
-                        <label for="example-search-input" class="col-form-label">Search</label>
-                        <input class="form-control" type="search" value="Where is google office" id="example-search-input">
-                    </div>
-                    <div class="form-group">
-                        <label for="example-email-input" class="col-form-label">Email</label>
-                        <input class="form-control" type="email" value="name@example.com" id="example-email-input">
-                    </div>
-                    <div class="form-group">
-                        <label for="example-url-input" class="col-form-label">URL</label>
-                        <input class="form-control" type="url" value="https://getbootstrap.com" id="example-url-input">
-                    </div>
-                    <div class="form-group">
-                        <label for="example-tel-input" class="col-form-label">Telephone</label>
-                        <input class="form-control" type="tel" value="+880-1233456789" id="example-tel-input">
-                    </div>
-                    <div class="form-group">
-                        <label for="inputPassword" class="">Password</label>
-                        <input type="password" class="form-control" id="inputPassword" value="inputPassword" placeholder="Password">
-                    </div>
-                    <div class="form-group">
-                        <label for="example-number-input" class="col-form-label">Number</label>
-                        <input class="form-control" type="number" value="42" id="example-number-input">
-                    </div>
-                    <div class="form-group">
-                        <label for="example-datetime-local-input" class="col-form-label">Date and time</label>
-                        <input class="form-control" type="datetime-local" value="2018-07-19T15:30:00" id="example-datetime-local-input">
-                    </div>
-                    <div class="form-group">
-                        <label for="example-date-input" class="col-form-label">Date</label>
-                        <input class="form-control" type="date" value="2018-03-05" id="example-date-input">
-                    </div>
-                    <div class="form-group">
-                        <label for="example-month-input" class="col-form-label">Month</label>
-                        <input class="form-control" type="month" value="2018-05" id="example-month-input">
-                    </div>
-                    <div class="form-group">
-                        <label for="example-week-input" class="col-form-label">Week</label>
-                        <input class="form-control" type="week" value="2018-W32" id="example-week-input">
-                    </div>
-                    <div class="form-group">
-                        <label for="example-time-input" class="col-form-label">Time</label>
-                        <input class="form-control" type="time" value="13:45:00" id="example-time-input">
-                    </div>
-                    <div class="form-group">
-                        <label class="col-form-label">Select</label>
-                        <select class="form-control">
-                            <option>Select</option>
-                            <option>Large select</option>
-                            <option>Small select</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-form-label">Custom Select</label>
-                        <select class="custom-select">
-                            <option selected="selected">Open this select menu</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="example-text-input-lg" class="col-form-label">Large</label>
-                        <input class="form-control form-control-lg" type="text" placeholder=".form-control-lg" id="example-text-input-lg">
-                    </div>
-                    <div class="form-group">
-                        <label for="example-text-input-sm" class="col-form-label">Small</label>
-                        <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" id="example-text-input-sm">
-                    </div>
-                    <div class="form-group has-primary">
-                        <label for="inputHorizontalPrimary" class="col-form-label">Email</label>
-                        <input type="email" class="form-control form-control-primary" id="inputHorizontalPrimary" placeholder="name@example.com">
-                        <div class="form-control-feedback">Primary! You've done it.</div>
-                        <small class="form-text text-muted">Example help text that remains unchanged.</small>
-                    </div>
-                    <div class="form-group has-warning">
-                        <label for="inputHorizontalWarning" class="col-form-label">Email</label>
-                        <input type="email" class="form-control form-control-warning" id="inputHorizontalWarning" placeholder="name@example.com">
-                        <div class="form-control-feedback">
-                            Shucks, check the formatting of that and try again.
-                        </div><small class="form-text text-muted">
-                            Example help text that remains unchanged.
-                        </small>
-                    </div>
-                    <div class="form-group mb-0 has-danger">
-                        <label for="inputHorizontalDnger" class="col-form-label">Email</label>
-                        <input type="email" class="form-control form-control-danger" id="inputHorizontalDnger" placeholder="name@example.com">
-                        <div class="form-control-feedback">Sorry, that username's taken. Try another?</div><small class="form-text text-muted">Example help text that remains unchanged.</small>
-                    </div>
+                    <h4 class="header-title">Update Your Profile</h4>
+                    @using (Ajax.BeginForm("Settings", "Manage", new AjaxOptions { HttpMethod = "POST" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        @*@Html.ValidationSummary()*@
+                        if (Request.IsAuthenticated)
+                        {
+                            var manager = new UserManager<ApplicationUser>(new UserStore<ApplicationUser>(new ApplicationDbContext()));
+                            var currentUser = manager.FindById(User.Identity.GetUserId());
+                            <div class="form-row">
+                                <div class="form-group col-md-6 mb-3">
+                                    @Html.LabelFor(m => m.Firstname, new { @class = "col-form-label" })
+                                    <input class="form-control text-box single-line" type="text" name="Firstname" value="@currentUser.Firstname" id="Firstname">
+                                    @Html.ValidationMessageFor(m => m.Firstname)
+                                </div>
+
+                                <div class="form-group col-md-6 mb-3">
+                                    @Html.LabelFor(m => m.Lastname, new { @class = "col-form-label" })
+                                    <input class="form-control" type="text" name="Lastname" value="@currentUser.Lastname" id="Lastname">
+                                    @Html.ValidationMessageFor(m => m.Lastname)
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    @Html.LabelFor(m => m.Email, new { @class = "col-form-label" })
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text" id="inputGroupPrepend">@@</span>
+                                        </div>
+                                        <input type="email" class="form-control" id="Email" name="Email" placeholder="Email" value="@currentUser.Email" aria-describedby="inputGroupPrepend" required="">
+                                    </div>
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    @Html.LabelFor(m => m.DateOfBirth, new { @class = "col-form-label" })
+                                    <input type="date" class="form-control text-box single-line" data-val="true" data-val-required="The Date Of Birth field is required." id="DateOfBirth" placeholder="Date Of Birth" value="@currentUser.DateOfBirth" name="DateOfBirth" required="">
+                                    @Html.ValidationMessageFor(m => m.DateOfBirth)
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    @Html.LabelFor(m => m.Mobile, new { @class = "col-form-label" })
+                                    <input type="text" class="form-control" id="Mobile" name="Mobile" placeholder="Mobile Number" value="@ViewBag.Mobile" required="">
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    @Html.LabelFor(m => m.Country, new { @class = "col-form-label" })
+                                    <input type="text" class="form-control" id="Country" name="Country" placeholder="Country" value="@currentUser.Country" required="">
+                                </div>
+                                <div class="col-md-3 mb-3">
+                                    @Html.LabelFor(m => m.City, new { @class = "col-form-label" })
+                                    <input type="text" class="form-control" id="City" name="City" placeholder="City" value="@currentUser.City" required="">
+                                </div>
+                                <div class="col-md-3 mb-3">
+                                    <label for="validationCustom05">Zip</label>
+                                    <input type="text" class="form-control" id="validationCustom05" placeholder="Zip">
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    @Html.LabelFor(m => m.Address1, new { @class = "col-form-label" })
+                                    <textarea type="text" id="Address1" class="form-control" name="Address1" placeholder="Address" spellcheck="true" required="">@currentUser.Address1</textarea>
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    @Html.LabelFor(m => m.Address2, new { @class = "col-form-label" })
+                                    <textarea type="text" id="Address2" class="form-control" name="Address2" placeholder="Address" spellcheck="true"></textarea>
+                                </div>
+                                <div class="col-md-4 mb-3">
+                                    <button type="submit" class="btn btn-primary mt-4 pr-4 pl-4">Update my profile</button>
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    <a href="/Manage/AdditionalSettings" class="btn btn-outline-danger mt-4 pr-4 pl-4">Additional Settings</a>
+                                </div>
+                            </div>
+                            @*<button type="submit" class="btn btn-primary mt-4 pr-4 pl-4">Update my profile</button>*@
+                           
+                        }
+                    }
                 </div>
             </div>
         </div>
     </div>
 
     <div class="col-lg-6 col-ml-12">
-        <div class="col-12">
-            <div class="card mt-5">
-                <div class="card-body">
-                    <h4 class="header-title">Profile</h4>
-                    <form class="needs-validation" novalidate="">
-                        <div class="form-row">
-                            <div class="col-md-6 mb-3">
-                                <label for="validationCustom01">First name</label>
-                                <input type="text" class="form-control" disabled id="validationCustom01" placeholder="First name" value="@ViewBag.Firstname" required="">
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <label for="validationCustom02">Last name</label>
-                                <input type="text" class="form-control" disabled id="validationCustom02" placeholder="Last name" value="@ViewBag.Lastname" required="">
-                            </div>
-                            <div class="col-md-12 mb-3">
-                                <label for="validationCustomUsername">Email</label>
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text" id="inputGroupPrepend">@@</span>
-                                    </div>
-                                    <input type="text" class="form-control" disabled id="validationCustomUsername" placeholder="Email" value="@ViewBag.Email" aria-describedby="inputGroupPrepend" required="">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="col-md-6 mb-3">
-                                <label for="validationCustom02">Date Of Birth</label>
-                                <input type="text" class="form-control" disabled id="validationCustom02" placeholder="Date Of Birth" value="@ViewBag.DOB" required="">
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <label for="validationCustom02">Mobile Number</label>
-                                <input type="text" class="form-control" disabled id="validationCustom02" placeholder="Mobile Number" value="@ViewBag.Mobile" required="">
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="col-md-6 mb-3">
-                                <label for="validationCustom03">Country</label>
-                                <input type="text" class="form-control" disabled id="validationCustom03" placeholder="Country" value="@ViewBag.Country " required="">
-                            </div>
-                            <div class="col-md-3 mb-3">
-                                <label for="validationCustom04">City</label>
-                                <input type="text" class="form-control" disabled id="validationCustom04" placeholder="City" value="@ViewBag.City" required="">
-                            </div>
-                            <div class="col-md-3 mb-3">
-                                <label for="validationCustom05">Zip</label>
-                                <input type="text" class="form-control" disabled id="validationCustom05" placeholder="Zip" required="">
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="col-md-12 mb-3">
-                                <label for="validationCustom03">Address</label>
-                                <textarea type="text" id="validationCustom03" disabled class="form-control" placeholder="Address" spellcheck="true" required="">@ViewBag.Address</textarea>
-                            </div>
-                        </div>
-                        <div class="form-row justify-content-center">
-                            <a href="/Manage/AdditionalSettings" class="btn btn-outline-danger mb-3">Additional Settings</a>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
 
         <div class="col-12">
             <div class="card mt-5">
@@ -198,3 +116,6 @@
         </div>
     </div>
 </div>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
