--- a/Student-Portal/Views/Shared/_CustomLayout2.cshtml
+++ b/Student-Portal/Views/Shared/_CustomLayout2.cshtml
@@ -80,7 +80,7 @@
 
                             <ul class="nav navbar-nav navbar-right">
                                 <li class="nav-item">
-                                    @Html.ActionLink("Hello " + @FirstName + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { @class = "nav-link", title = "Manage" })
+                                    @Html.ActionLink("Hello " + @FirstName + "!", "Settings", "Manage", routeValues: null, htmlAttributes: new { @class = "nav-link", title = "Manage" })
                                 </li>
                                 <li class="nav-item"><a href="javascript:document.getElementById('logoutForm').submit()" class="nav-RegisterCourse nav-link">Log off</a></li>
                             </ul>
