--- a/Student-Portal/Views/Account/Register.cshtml
+++ b/Student-Portal/Views/Account/Register.cshtml
@@ -37,12 +37,13 @@
                     @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                     {
                         @Html.AntiForgeryToken()
+                        @Html.ValidationSummary("", new { @class = "text-danger" })
                         if (Html.ValidationSummary(true, "", new { @class = "text-danger" }) != null)
                         {
                             @*<div class="alert alert-dismissible alert-danger" style="max-width:360px; max-height:72px">
-                                <button type="button" class="close" data-dismiss="alert">&times;</button>
-                                <strong>Oh snap!</strong> @Html.ValidationSummary("", new { @class = "text-danger" })
-                            </div>*@
+                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                    <strong>Oh snap!</strong> @Html.ValidationSummary("", new { @class = "text-danger" })
+                </div>*@
                             <div class="modal fade show" id="exampleModalLong">
                                 <div class="modal-dialog">
                                     <div class="modal-content">
