--- a/Student-Portal/Views/Account/Register.cshtml
+++ b/Student-Portal/Views/Account/Register.cshtml
@@ -44,72 +44,67 @@
                     <button type="button" class="close" data-dismiss="alert">&times;</button>
                     <strong>Oh snap!</strong> @Html.ValidationSummary("", new { @class = "text-danger" })
                 </div>*@
-                            <div class="modal fade show" id="exampleModalLong">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title text-danger">Oh snap!</h5>
-                                            <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            @Html.ValidationSummary("", new { @class = "text-danger" })
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                            <button type="button" class="btn btn-primary">Save changes</button>
-                                        </div>
+                        }
+                        <div class="form-group">
+                            <div class="col-md-12 mb-3">
+                                @Html.LabelFor(m => m.Email, new { @class = "col-form-label" })
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="inputGroupPrepend">@@</span>
                                     </div>
+                                    <input type="email" class="form-control" id="Email" name="Email" placeholder="Email" value="" aria-describedby="inputGroupPrepend" required="">
+                                    @*@Html.TextBoxFor(m => m.Email, new { @class = "form-control" })*@
                                 </div>
                             </div>
-                        }
-                        @*<div class="login-form-body">*@
-                        @*<div class="well">*@
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                         </div>
                         <div class="form-group">
-                            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                        </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-                            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                            <div class="col-md-12 mb-3">
+                                @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                            </div>
                         </div>
 
                         <div class="form-group">
-                            @Html.LabelFor(m => m.RoleeName, new { @class = "col-md-2 control-label" })
-                            @Html.DropDownListFor(m => m.RoleeName, new SelectList(ViewBag.Roles, "Value", "Text", "Student"), new { @class = "form-control" })
+                            <div class="col-md-12 mb-3">
+                                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+                                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                            </div>
                         </div>
 
-                        <div>
-                            <h4 class="header-title">Personal Details</h4>
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Firstname, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="form-group">
+                            <div class="col-md-12 mb-3">
+                                @Html.LabelFor(m => m.RoleeName, new { @class = "col-form-label" })
+                                @Html.DropDownListFor(m => m.RoleeName, new SelectList(ViewBag.Roles, "Value", "Text", "Student"), new { @class = "form-control" })
+                            </div>
+                        </div>
+                        <h4 class="header-title">Personal Details</h4>
+                        <div class="form-row">
+                            <div class="form-group col-md-6 mb-3">
+                                @Html.LabelFor(model => model.Firstname, htmlAttributes: new { @class = "col-form-label" })
                                 @Html.EditorFor(model => model.Firstname, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Firstname, "", new { @class = "text-danger" })
                             </div>
 
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Lastname, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="form-group col-md-6 mb-3">
+                                @Html.LabelFor(model => model.Lastname, htmlAttributes: new { @class = "col-form-label" })
                                 @Html.EditorFor(model => model.Lastname, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Lastname, "", new { @class = "text-danger" })
                             </div>
 
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Fathername, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="form-group col-md-4 mb-3">
+                                @Html.LabelFor(model => model.Fathername, htmlAttributes: new { @class = "col-form-label" })
                                 @Html.EditorFor(model => model.Fathername, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Fathername, "", new { @class = "text-danger" })
                             </div>
 
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Mothername, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="form-group col-md-4 mb-3">
+                                @Html.LabelFor(model => model.Mothername, htmlAttributes: new { @class = "col-form-label" })
                                 @Html.EditorFor(model => model.Mothername, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Mothername, "", new { @class = "text-danger" })
                             </div>
 
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.DateOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="form-group col-md-4 mb-3">
+                                @Html.LabelFor(model => model.DateOfBirth, htmlAttributes: new { @class = "col-form-label" })
                                 @Html.EditorFor(model => model.DateOfBirth, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.DateOfBirth, "", new { @class = "text-danger" })
                             </div>
@@ -118,32 +113,32 @@
                         <div>
                             <h4 class="header-title">Communication Details</h4>
 
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Mobile, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-6 mb-3">
+                                @Html.LabelFor(model => model.Mobile, htmlAttributes: new { @class = "col-form-label" })
                                 @Html.EditorFor(model => model.Mobile, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Mobile, "", new { @class = "text-danger" })
                             </div>
 
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Address1, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-6 mb-3">
+                                @Html.LabelFor(model => model.Address1, htmlAttributes: new { @class = "col-form-label" })
                                 @Html.EditorFor(model => model.Address1, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Address1, "", new { @class = "text-danger" })
                             </div>
 
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Address2, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-12 mb-3">
+                                @Html.LabelFor(model => model.Address2, htmlAttributes: new { @class = "ccol-form-label" })
                                 @Html.EditorFor(model => model.Address2, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Address2, "", new { @class = "text-danger" })
                             </div>
 
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.City, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-12 mb-3">
+                                @Html.LabelFor(model => model.City, htmlAttributes: new { @class = "col-form-label" })
                                 @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger" })
                             </div>
 
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Country, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-12 mb-3">
+                                @Html.LabelFor(model => model.Country, htmlAttributes: new { @class = "col-form-label" })
                                 @Html.EditorFor(model => model.Country, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Country, "", new { @class = "text-danger" })
                             </div>
@@ -152,19 +147,19 @@
                         <div>
                             <h4 class="header-title">Academic Details</h4>
                             <div class="form-group">
-                                @Html.LabelFor(model => model.Institution, htmlAttributes: new { @class = "control-label col-md-2" })
+                                @Html.LabelFor(model => model.Institution, htmlAttributes: new { @class = "col-form-label" })
                                 @Html.EditorFor(model => model.Institution, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Institution, "", new { @class = "text-danger" })
                             </div>
 
                             <div class="form-group">
-                                @Html.LabelFor(model => model.Program, htmlAttributes: new { @class = "control-label col-md-2" })
+                                @Html.LabelFor(model => model.Program, htmlAttributes: new { @class = "col-form-label" })
                                 @Html.EditorFor(model => model.Program, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Program, "", new { @class = "text-danger" })
                             </div>
 
                             <div class="form-group">
-                                @Html.LabelFor(model => model.YearOfJoining, htmlAttributes: new { @class = "control-label col-md-2" })
+                                @Html.LabelFor(model => model.YearOfJoining, htmlAttributes: new { @class = "col-form-label" })
                                 @Html.EditorFor(model => model.YearOfJoining, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.YearOfJoining, "", new { @class = "text-danger" })
                             </div>
