added course link to faculty layout

--- a/Student-Portal/Views/Shared/_CustomLayout.cshtml
+++ b/Student-Portal/Views/Shared/_CustomLayout.cshtml
@@ -70,6 +70,10 @@
                                 {
                                     <li><a href="/RegisterCourse"><i class="fa fa-book"></i><span>Register Course</span></a></li>
                                 }
+                                else if (User.IsInRole("Faculty") )
+                                {
+                                    <li><a href="/Courses"><i class="fa fa-cubes"></i><span>Courses</span></a></li>
+                                }
                             }
                         </ul>
                     </nav>
