--- a/Student-Portal/Views/ViewUser/Delete.cshtml
+++ b/Student-Portal/Views/ViewUser/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Student_Portal.Models.ViewUserGrid
+﻿@model Student_Portal.Models.ApplicationUser
 
 @{
     ViewBag.Title = "Delete";
@@ -28,12 +28,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Email)
