Added link to college view on layout

--- a/Student-Portal/Views/Shared/_CustomLayout.cshtml
+++ b/Student-Portal/Views/Shared/_CustomLayout.cshtml
@@ -61,6 +61,7 @@
                                         <li>@Html.ActionLink("Courses", "Index", "Courses")</li>
                                         <li>@Html.ActionLink("View Users", "Index", "ViewUser")</li>
                                         <li>@Html.ActionLink("Faculty Ranks", "Index", "FacultyRank")</li> }*@
+                                    <li><a href="/College"><i class="fa fa-university"></i><span>Colleges</span></a></li>
                                     <li><a href="/Role"><i class="fa fa-user"></i><span>Roles</span></a></li>
                                     <li><a href="/Courses"><i class="fa fa-cubes"></i><span>Courses</span></a></li>
                                     <li><a href="/ViewUser"><i class="fa fa-users"></i><span>View Users</span></a></li>
