--- a/Student-Portal/Views/Courses/Delete.cshtml
+++ b/Student-Portal/Views/Courses/Delete.cshtml
@@ -14,6 +14,14 @@
                     <hr />
                     <dl class="dl-horizontal">
                         <dt>
+                            @Html.DisplayNameFor(model => model.Departments.DeptName)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Departments.DeptName)
+                        </dd>
+
+                        <dt>
                             @Html.DisplayNameFor(model => model.CourseName)
                         </dt>
 
