changed table header

--- a/Student-Portal/Views/Salaries/Index.cshtml
+++ b/Student-Portal/Views/Salaries/Index.cshtml
@@ -13,7 +13,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.SalaryStructure.Role)
+            Structure Type
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Username)
