added link for faculty salary

--- a/Student-Portal/Views/Shared/_CustomLayout.cshtml
+++ b/Student-Portal/Views/Shared/_CustomLayout.cshtml
@@ -97,6 +97,7 @@
                                 else if (User.IsInRole("Faculty"))
                                 {
                                     <li><a href="/Courses"><i class="fa fa-cubes"></i><span>Courses</span></a></li>
+                                    <li><a href="/Salaries"><i class="fa fa-table"></i><span>Salary</span></a></li>
                                 }
                             }
                         </ul>
