Add link to dashboard for faculty

--- a/Student-Portal/Views/Shared/_CustomLayout2.cshtml
+++ b/Student-Portal/Views/Shared/_CustomLayout2.cshtml
@@ -74,7 +74,7 @@
                                 <a class="nav-link" href="/RegisterCourse/Index">Dashboard</a>
                             </li>
                         }
-                        else if (User.IsInRole("Faculty"))
+                        else
                         {
                             <li class="nav-item">
                                 <a class="nav-link" href="/Manage/Settings">Dashboard</a>
