Change reference link for previous page button

--- a/Student-Portal/Views/Account/AccessDenied.cshtml
+++ b/Student-Portal/Views/Account/AccessDenied.cshtml
@@ -42,7 +42,7 @@
                 </h2>
                 <p>We're sorry, but you do not have access to this page.</p>
                 <p>That's all we know.</p>
-                <a href="/">Back to Homepage</a>
+                <a href="javascript:history.go(-1)">Go Back to Previous Page</a>
             </div>
         </div>
     </div>
