Add notification to Role view

--- a/Student-Portal/Views/Role/Index.cshtml
+++ b/Student-Portal/Views/Role/Index.cshtml
@@ -48,3 +48,9 @@
         </div>
     </div>
 </div>
+@if (ViewBag.ToastNotification != null)
+{
+    <script type="text/javascript">
+        @Html.Raw(ViewBag.ToastNotification);
+    </script>
+}
