--- a/Student-Portal/Views/RegisterCourse/Index.cshtml
+++ b/Student-Portal/Views/RegisterCourse/Index.cshtml
@@ -3,53 +3,50 @@
 @{
     ViewBag.Title = "Register Course";
 }
-@if (ViewBag.RegError != null)
-{<div class="alert-dismiss">
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        <h6><strong>Oh snap!</strong> You've already registered that course before.</h6>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span class="fa fa-times"></span>
-        </button>
-    </div>
-</div>
-}
-    <div class="row justify-content-md-center">
-        <div class="col-lg-9 mt-5">
-            <div class="card">
-                <div class="card-body">
-                    @Html.ActionLink("Show Registered Couses", "ShowCourse")
-                    @using (Html.BeginForm("Index", "RegisterCourse", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <h4>Register a new course.</h4>
-                        <hr />
-                        @Html.ValidationSummary("", new { @class = "text-danger" })
-                        @*<div class="form-group">
-                                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                                <div class="col-md-10">
-                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                                </div>
-                            </div>*@
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.CourseId, new { @class = "col-md-2 control-label" })
+<div class="row justify-content-md-center">
+    <div class="col-lg-9 mt-5">
+        <div class="card">
+            <div class="card-body">
+                @Html.ActionLink("Show Registered Couses", "ShowCourse")
+                @using (Html.BeginForm("Index", "RegisterCourse", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <h4>Register a new course.</h4>
+                    <hr />
+                    @Html.ValidationSummary("", new { @class = "text-danger" })
+                    @*<div class="form-group">
+                            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
                             <div class="col-md-10">
-                                @Html.DropDownListFor(m => m.CourseId, new SelectList(ViewBag.Course, "Value", "Text"), "Select a course to register", new { @class = "form-control btn btn-light dropdown-toggle" })
-                                @Html.ValidationMessageFor(m => m.CourseId, "", new { @class = "error, text-danger" })
+                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                             </div>
+                        </div>*@
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.CourseId, new { @class = "col-md-2 control-label" })
+                        <div class="col-md-10">
+                            @Html.DropDownListFor(m => m.CourseId, new SelectList(ViewBag.Course, "Value", "Text"), "Select a course to register", new { @class = "form-control btn btn-light dropdown-toggle" })
+                            @Html.ValidationMessageFor(m => m.CourseId, "", new { @class = "error, text-danger" })
                         </div>
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" class="btn btn-default" value="Register" />
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" class="btn btn-default" value="Register" />
                         </div>
-                    }
+                    </div>
+                }
 
-                    @*@Html.Partial("_LoginPartial")*@
+                @*@Html.Partial("_LoginPartial")*@
 
-                    @section Scripts {
-                        @Scripts.Render("~/bundles/jqueryval")
-                    }
-                </div>
+                @section Scripts {
+                    @Scripts.Render("~/bundles/jqueryval")
+                }
             </div>
         </div>
     </div>
+</div>
+
+@if (ViewBag.ToastNotification != null)
+{
+    <script type="text/javascript">
+        @Html.Raw(ViewBag.ToastNotification);
+    </script>
+}
